--- a/ShadowBlog/Views/BlogPosts/Create.cshtml
+++ b/ShadowBlog/Views/BlogPosts/Create.cshtml
@@ -10,7 +10,7 @@
 <h4>BlogPost</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-6">
         <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -24,7 +24,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Abstract" class="control-label"></label>
-                <input asp-for="Abstract" class="form-control" />
+                <textarea asp-for="Abstract" class="form-control" rows="5"></textarea>
                 <span asp-validation-for="Abstract" class="text-danger"></span>
             </div>
             <div class="form-group">
