--- a/ShadowBlog/Views/Blogs/Index.cshtml
+++ b/ShadowBlog/Views/Blogs/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@using ShadowBlog.Models
 @using ShadowBlog.Services.Interfaces
 
-@inject IImageService _imageService 
-@model IEnumerable<ShadowBlog.Models.Blog>
+@inject IImageService _imageService
+@model IEnumerable<Blog>
 
 @{
     ViewData["Title"] = "Index";
@@ -32,26 +32,28 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                <img src="@_imageService.DecodeImage(item.ImageData, item.ContentType)"/>
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Created)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    <img class="img-fluid" src="@_imageService.DecodeImage(item.ImageData, item.ContentType)" />
+                </td>
+
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Description)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Created)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
