--- a/ShadowBlog/Views/BlogPosts/Delete.cshtml
+++ b/ShadowBlog/Views/BlogPosts/Delete.cshtml
@@ -60,10 +60,10 @@
             @Html.DisplayFor(model => model.ImageData)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.ImageType)
+            @Html.DisplayNameFor(model => model.ContentType)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.ImageType)
+            @Html.DisplayFor(model => model.ContentType)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Blog)
