--- a/ShadowBlog/Views/BlogPosts/Create.cshtml
+++ b/ShadowBlog/Views/BlogPosts/Create.cshtml
@@ -13,10 +13,19 @@
     <div class="col-md-6">
         <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+            <!--Right here is where I need to decide whether to show the SelectList to the User
+                or embed the FK into the form as a hidden...-->
+            @if(Model?.BlogId > 0)
+            {
+                <input type="hidden" asp-for="BlogId" />
+            }
+            else
+            {
+                <div class="form-group">
                 <label asp-for="BlogId" class="control-label"></label>
                 <select asp-for="BlogId" class="form-control" asp-items="ViewBag.BlogId"></select>
             </div>
+            }
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
                 <input asp-for="Title" class="form-control" />
@@ -29,7 +38,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Content" class="control-label"></label>
-                <input asp-for="Content" class="form-control" />
+                <textarea asp-for="Content" class="form-control"></textarea>
                 <span asp-validation-for="Content" class="text-danger"></span>
             </div>
 
