--- a/ShadowBlog/Views/Blogs/Index.cshtml
+++ b/ShadowBlog/Views/Blogs/Index.cshtml
@@ -50,8 +50,9 @@
                 </td>
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a> |
+                    <a asp-controller="BlogPosts" asp-action="ChildIndex" asp-route-blogId="@item.Id">All Posts</a> |
+                    <a asp-controller="BlogPosts" asp-action="Create" asp-route-blogId="@item.Id">New Post</a>
                 </td>
             </tr>
         }
