--- a/ShadowBlog/Views/BlogPosts/Edit.cshtml
+++ b/ShadowBlog/Views/BlogPosts/Edit.cshtml
@@ -17,7 +17,7 @@
             <input type="hidden" asp-for="Created" />
             <input type="hidden" asp-for="Updated" />
             <input type="hidden" asp-for="ImageData" />
-            <input type="hidden" asp-for="ContentType" />
+            <input type="hidden" asp-for="ImageType" />
             <div class="form-group">
                 <label asp-for="BlogId" class="control-label"></label>
                 <select asp-for="BlogId" class="form-control" asp-items="ViewBag.BlogId"></select>
