--- a/ShadowBlog/Views/BlogPosts/Index.cshtml
+++ b/ShadowBlog/Views/BlogPosts/Index.cshtml
@@ -41,7 +41,7 @@
         {
         <tr>
             <td>
-                <img class="img-fluid" width="50" src="@_imageService.DecodeImage(item.ImageData, item.ContentType)" />
+                <img class="img-fluid" width="50" src="@_imageService.DecodeImage(item.ImageData, item.ImageType)" />
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Created)
