--- a/ShadowBlog/Views/Shared/_Layout.cshtml
+++ b/ShadowBlog/Views/Shared/_Layout.cshtml
@@ -25,7 +25,10 @@
                             <a class="nav-link text-dark" asp-controller="BlogPosts" asp-action="Create">Create BlogPost</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="BlogPosts" asp-action="Create">All BlogPost</a>
+                            <a class="nav-link text-dark" asp-controller="BlogPosts" asp-action="Edit">Edit BlogPost</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="BlogPosts" asp-action="Index">All BlogPost</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
