--- a/ShadowBlog/Views/BlogPosts/Edit.cshtml
+++ b/ShadowBlog/Views/BlogPosts/Edit.cshtml
@@ -11,18 +11,14 @@
 <hr />
 <div class="row">
     <div class="col-md-6">
-        <form asp-action="Edit">
+        <form asp-action="Edit" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="BlogId" />
             <input type="hidden" asp-for="Created" />
-            <input type="hidden" asp-for="Updated" />
             <input type="hidden" asp-for="ImageData" />
             <input type="hidden" asp-for="ImageType" />
-            <div class="form-group">
-                <label asp-for="BlogId" class="control-label"></label>
-                <select asp-for="BlogId" class="form-control" asp-items="ViewBag.BlogId"></select>
-                <span asp-validation-for="BlogId" class="text-danger"></span>
-            </div>
+            <input type="hidden" asp-for="Slug" />
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
                 <input asp-for="Title" class="form-control" />
@@ -42,11 +38,6 @@
                 <label asp-for="ReadyStatus" class="control-label"></label>
                 <select asp-for="ReadyStatus" asp-items="@Html.GetEnumSelectList<ReadyState>()" class="form-control"></select>
                 <span asp-validation-for="ReadyStatus" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Slug" class="control-label"></label>
-                <input asp-for="Slug" class="form-control" />
-                <span asp-validation-for="Slug" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Image" class="control-label"></label>
