--- a/ShadowBlog/Views/Blogs/Index.cshtml
+++ b/ShadowBlog/Views/Blogs/Index.cshtml
@@ -51,7 +51,7 @@
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                     <a asp-action="Delete" asp-route-id="@item.Id">Delete</a> |
-                    <a asp-controller="BlogPosts" asp-action="ChildIndex" asp-route-blogId="@item.Id">All Posts</a> |
+                    <a asp-controller="BlogPosts" asp-action="ChildIndex" asp-route-blogId="@item.Id">My Posts</a> |
                     <a asp-controller="BlogPosts" asp-action="Create" asp-route-blogId="@item.Id">New Post</a>
                 </td>
             </tr>
