--- a/ShadowBlog/Views/BlogPosts/ChildIndex.cshtml
+++ b/ShadowBlog/Views/BlogPosts/ChildIndex.cshtml
@@ -11,22 +11,22 @@
     <div class="banner-slider owl-carousel">
         <div class="item" style="background: url(assets/img/banner/slider-1.jpg)">
             <div class="banner-inner">
-                <h4>Fashion</h4>
-                <h2>Dining Room Reveal</h2>
+                <h4>Dev Blog</h4>
+                <h2>How To: [DEV BLOGPOST TITLE]</h2>
                 <a href="single.html" class="btn readmore-button">Read more</a>
             </div>
         </div>
         <div class="item" style="background: url(assets/img/banner/slider-2.jpg)">
             <div class="banner-inner">
-                <h4>Fashion</h4>
-                <h2>Dining Room Reveal</h2>
+                <h4>Dev Blog</h4>
+                <h2>How To: [DEV BLOGPOST TITLE]</h2>
                 <a href="single.html" class="btn readmore-button">Read more</a>
             </div>
         </div>
         <div class="item" style="background: url(assets/img/banner/slider-1.jpg)">
             <div class="banner-inner">
-                <h4>Fashion</h4>
-                <h2>Dining Room Reveal</h2>
+                <h4>Dev Blog</h4>
+                <h2>How To: [DEV BLOGPOST TITLE]</h2>
                 <a href="single.html" class="btn readmore-button">Read more</a>
             </div>
         </div>
@@ -45,7 +45,7 @@
                     </div>
                     <div class="blog-post-item-wrap">
                         <div class="post-content">
-                            <h4><a asp-controller="BlogPosts" asp-action="Details" asp-route-blogId="@blogPost.Id">@blogPost.Title</a></h4>
+                            <h4><a asp-controller="BlogPosts" asp-action="Details" asp-route-id="@blogPost.Id">@blogPost.Title</a></h4>
                             <p>@blogPost.Abstract</p>
                             <div class="post-meta">
                                 <ul>
