--- a/ShadowBlog/Views/Shared/_Layout.cshtml
+++ b/ShadowBlog/Views/Shared/_Layout.cshtml
@@ -51,35 +51,25 @@
     </div>
     <!-- //. search Popup -->
     <!-- navbar start -->
+    <!--Side Nav Menu-->
     <div id="side-navbar" class="side-navbar">
         <i id="side-menu-close" class="fa fa-times"></i>
         <ul class="side-navbar-items">
-            <li class="menu-item-has-children">
-                Home
-                <ul class="sub-menu ps-0">
-                    <li><a href="home-1.html">Home 01</a></li>
-                    <li><a href="home-2.html">Home 02</a></li>
-                    <li><a href="home-3.html">Home 03</a></li>
-                    <li><a href="home-4.html">Home 04</a></li>
-                </ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="https://jordanthopps.netlify.app/#about" target="_blank">About</a></li>
+            <li><a asp-controller="Home" asp-action="ContactMe">Contact</a></li>
+            <li>
+                <a asp-area="Identity"
+                   asp-page="/Account/Login">Log In</a>
             </li>
-            <li><a href="#">Features</a></li>
-            <li class="menu-item-has-children">
-                Pages
-                <ul class="sub-menu ps-0">
-                    <li><a href="single.html">Blog</a></li>
-                    <li><a href="single-blog-2.html">Blog 02</a></li>
-                    <li><a href="single-blog-3.html">Blog 03</a></li>
-                    <li><a href="single-blog-4.html">Blog 04</a></li>
-                    <li><a href="single-blog-full.html">Blog 05</a></li>
-                    <li><a href="gallery-blog.html">Gallery Blog</a></li>
-                </ul>
+            <li>
+                <a asp-area="Identity"
+                   asp-page="/Account/Register">Register</a>
             </li>
-            <li><a href="home-3.html">Lifestyle</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
         </ul>
     </div>
+    <!-- /Side Nav Menu-->
+    <!--Top Nav Menu-->
     <header class="navbar-area">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid nav-container">
@@ -94,60 +84,45 @@
                     <div class="side-menu-bar d-inline-flex">
                         <i id="side-menu-open" class="fa fa-bars"></i>
                     </div>
-                    <a href="home-1.html" class="logo">
-                        <img src="/img/Profile Background.png" alt="img">
-                    </a>
-                    <div class="nav-right-part">
-                        <ul class="social-area">
-                            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                            <li><a class="search" href="#"><i class="fa fa-search"></i></a></li>
-                        </ul>
-                    </div>
                 </div>
+                @*<div class="justify-content-md-end">
+                        <a href="home-1.html" class="logo">
+                            <img src="~/img/Profile Background.png" alt="img">
+                        </a>
+                    </div>*@
                 <div class="collapse navbar-collapse" id="themefie_main_menu">
-                    <ul class="navbar-nav menu-open text-center">
+                    <ul class="navbar-nav menu-open text-end">
                         <li>
-                            <a href="home-1.html">HOME</a>
-                        </li>
-                        <li>
-                            <a href="home-4.html">FEATURES</a>
-                        </li>
-                        <li class="menu-item-has-children">
-                            <a href="#">PAGES</a>
-                            <ul class="sub-menu">
-                                <li><a href="single.html">Blog</a></li>
-                                <li><a href="single-blog-2.html">Blog 02</a></li>
-                                <li><a href="single-blog-3.html">Blog 03</a></li>
-                            </ul>
+                            <a asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li>
-                            <a href="about.html">ABOUT</a>
+                            <a href="https://jordanthopps.netlify.app/#about" target="_blank">About</a>
                         </li>
                         <li>
-                            <a href="contact.html">CONTACT</a>
+                            <a asp-controller="Home" asp-action="ContactMe">Contact</a>
                         </li>
-                    </ul>
-                </div>
-                <div class="nav-right-part text-end nav-right-part-desktop">
-                    <ul>
-                        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                        <li><a href="#"><i class="fab fa-github"></i></a></li>
                         <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                        <li><a class="search" href="#"><i class="fa fa-search"></i></a></li>
+                        <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                        <li>
+                            <a asp-area="Identity"
+                               asp-page="/Account/Login">Log In</a>
+                        </li>
+                        <li>
+                            <a asp-area="Identity"
+                               asp-page="/Account/Register">Register</a>
+                        </li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
     <!-- navbar end -->
+    @*<div class="banner-logo-area">
+            <img src="~/img/Blog _Layout Head.png" alt="img">
+        </div>*@
 
-    <div class="banner-logo-area">
-        <img src="~/img/Profile Background.png" alt="img">
-    </div>
-
-@RenderBody() 
+    @RenderBody()
 
     <!-- footer area start -->
     <footer class="footer-area text-center">
@@ -158,8 +133,7 @@
                         <div class="footer-widget widget">
                             <h4 class="widget-title">Follow me</h4>
                             <ul class="social-area">
-                                <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                                <li><a href="#"><i class="fab fa-github"></i></a></li>
                                 <li><a href="#"><i class="fab fa-twitter"></i></a></li>
                                 <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
                             </ul>
@@ -170,7 +144,6 @@
                             <div class="footer-logo d-inline-block">
                                 <img src="assets/img/logo-2.png" alt="img">
                             </div>
-                            <p>Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris vitae erat consequat auctor eu in elit. Class aptent taciti disse in orci enim.</p>
                             <form>
                                 <div class="single-input-wrap mb-0">
                                     <input type="email" placeholder="Enter Email">
@@ -180,7 +153,7 @@
                     </div>
                     <div class="col-lg-4">
                         <div class="footer-widget widget widget_link">
-                            <h4 class="widget-title">Popular tags</h4>
+                            <h4 class="widget-title">Popular tags</h4> <!--TODO: Decide if you're keeping this div section-->
                             <ul>
                                 <li><a href="home-3.html">#TRAVEL</a></li>
                                 <li><a href="home-3.html">#LIFE</a></li>
@@ -201,7 +174,7 @@
     <!-- footer area end -->
     <!-- back-to-top end -->
     <div class="back-to-top">
-        <span class="back-top"><i class="fas fa-angle-double-up"></i></span>
+        <a href="#"><span class="back-top"><i class="fas fa-angle-double-up"></i></span></a>
     </div>
 
 
